@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2008-09-15" />
+<meta name="date" content="2008-09-17" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2008-09-15</td></tr>
+<td>2008-09-17</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.15</td></tr>
 </tbody>
@@ -394,10 +394,9 @@ of this program, and also in the chapter <a class="reference" href="#gnu-general
 <p>Geany is a small and lightweight Integrated Development Environment. It
 was developed to provide a small and fast IDE, which has only a few
 dependencies from other packages. Another goal was to be as independent
-as possible from a special Desktop Environment like KDE or GNOME,
-so Geany only requires the GTK2 toolkit and therefore you only need
-the GTK2 runtime libraries installed to run it.</p>
-<p>Some basic features of Geany are:</p>
+as possible from a special Desktop Environment like KDE or GNOME -
+Geany only requires the GTK2 runtime libraries.</p>
+<p>Some basic features of Geany:</p>
 <ul class="simple">
 <li>Syntax highlighting</li>
 <li>Code folding</li>
@@ -2606,7 +2605,7 @@ space.</td>
 <tr><td>Smart line indent</td>
 <td>&nbsp;</td>
 <td>Indents the current line or all selected lines
-with the same intentation as the previous line.</td>
+with the same indentation as the previous line.</td>
 </tr>
 <tr><td><strong>Settings</strong></td>
 <td>&nbsp;</td>
@@ -4241,7 +4240,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2008-09-17 16:01 UTC.
+Generated on: 2008-09-17 16:47 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
